// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SampleBasketSection component renders correctly 1`] = `
<div>
  <div
    class="SampleBasketSection Section-module_Section__yrYL2 Section-module_Section--white__C7uPc"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="RichText"
        >
          <p
            class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1 MuiTypography-gutterBottom"
          >
            test rich text
          </p>
        </div>
        <div
          class="SampleBasketSectionProducts"
        >
          <button
            class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu product-wrapper"
            tabindex="0"
            type="button"
          >
            <img
              alt="sample-1"
              class="product-image OverviewCard-module_header-picture__uBGaH Media-module_Media__GKPD2"
              src="http://localhost:8000/image-real-file-name.jpg"
              style="object-fit: contain; object-position: center;"
            />
            <div
              class="OverviewCard-module_body__ECyj2"
            >
              <h4
                class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h4"
              />
              <div
                class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA OverviewCard-module_children--without-margin__6TWTA"
              >
                <div
                  class="product"
                >
                  <div
                    class="product-description"
                  >
                    <p
                      class="MuiTypography-root product-title Typography-module_Typography__aA2Zb MuiTypography-body1"
                    >
                      sample-1
                    </p>
                    <p
                      class="MuiTypography-root product-color Typography-module_Typography__aA2Zb MuiTypography-body1"
                    >
                      green | rough
                    </p>
                    <p
                      class="MuiTypography-root product-size Typography-module_Typography__aA2Zb MuiTypography-body1"
                    />
                  </div>
                </div>
              </div>
              <div
                class="OverviewCard-module_footer__MMw-Y"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-outlined product-button MuiButton-outlinedPrimary"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label buttonStyles-label-4"
                  >
                    MC: pdp.overview.removeSample
                    <span
                      class="MuiButton-endIcon MuiButton-iconSizeMedium"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 13H5v-2h14v2z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="complete-button"
        >
          <button
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-contained buttonStyles-contained-3 MuiButton-containedPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label buttonStyles-label-4"
            >
              MC: pdp.overview.completeSampleOrder
              <span
                class="MuiButton-endIcon MuiButton-iconSizeMedium"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zM1 2v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.14 0-.25-.11-.25-.25l.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.08-.14.12-.31.12-.48 0-.55-.45-1-1-1H5.21l-.94-2H1zm16 16c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SampleBasketSection component should render form after complete button press 1`] = `
<div>
  <div
    class="SampleBasketSection Section-module_Section__yrYL2 Section-module_Section--white__C7uPc"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="RichText"
        >
          <p
            class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1 MuiTypography-gutterBottom"
          >
            test rich text
          </p>
        </div>
        <div
          class="SampleBasketSectionProducts"
        >
          <button
            class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu product-wrapper"
            tabindex="0"
            type="button"
          >
            <img
              alt="sample-1"
              class="product-image OverviewCard-module_header-picture__uBGaH Media-module_Media__GKPD2"
              src="http://localhost:8000/image-real-file-name.jpg"
              style="object-fit: contain; object-position: center;"
            />
            <div
              class="OverviewCard-module_body__ECyj2"
            >
              <h4
                class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h4"
              />
              <div
                class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA OverviewCard-module_children--without-margin__6TWTA"
              >
                <div
                  class="product"
                >
                  <div
                    class="product-description"
                  >
                    <p
                      class="MuiTypography-root product-title Typography-module_Typography__aA2Zb MuiTypography-body1"
                    >
                      sample-1
                    </p>
                    <p
                      class="MuiTypography-root product-color Typography-module_Typography__aA2Zb MuiTypography-body1"
                    >
                      green | rough
                    </p>
                    <p
                      class="MuiTypography-root product-size Typography-module_Typography__aA2Zb MuiTypography-body1"
                    />
                  </div>
                </div>
              </div>
              <div
                class="OverviewCard-module_footer__MMw-Y"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root buttonStyles-root-21 MuiButton-outlined product-button MuiButton-outlinedPrimary"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label buttonStyles-label-24"
                  >
                    MC: pdp.overview.removeSample
                    <span
                      class="MuiButton-endIcon MuiButton-iconSizeMedium"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 13H5v-2h14v2z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Section-module_Section__yrYL2"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h2
          class="MuiTypography-root Section-module_title__sia8j Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h2"
        >
          Complete form
        </h2>
        <form
          class="Form-module_Form__Fe-5R Form Form-module_Form--rightAlignButton__P18S5"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root MuiTextField-root TextField-module_TextField__zD7pc MuiFormControl-fullWidth"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
                  data-shrink="false"
                >
                  Text
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input"
                    name="text"
                    type="text"
                    value=""
                  />
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-41 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-43"
                    >
                      <span>
                        Text
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Form-module_ButtonWrapper__LUerd"
          >
            <button
              aria-action="sample-1-green | rough"
              aria-label="samples ordering basket form submitted"
              class="MuiButtonBase-root MuiButton-root buttonStyles-root-21 MuiButton-contained buttonStyles-contained-23 Form-module_Button__nfWj5 MuiButton-containedPrimary"
              data-gtm="{\\"id\\":\\"form-button1\\",\\"label\\":\\"samples ordering basket form submitted\\",\\"action\\":\\"sample-1-green | rough\\"}"
              tabindex="0"
              type="submit"
            >
              <span
                class="MuiButton-label buttonStyles-label-24"
              >
                Submit
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </form>
        <p
          class="MuiTypography-root RecaptchaPrivacyLinks Typography-module_Typography__aA2Zb MuiTypography-body1"
        >
          Dette nettstedet er beskyttet av reCAPTCHA og Googles 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
            href="https://policies.google.com/privacy?hl=no-nb"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Personvernregler
            </span>
          </a>
           og 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
            href="https://policies.google.com/terms?hl=no-nb"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Vilkår for bruk
            </span>
          </a>
           gjelder.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`SampleBasketSection remove sample from basket when all samples are removed renders empty basket content and \`browse all products\` button 1`] = `
<div>
  <div
    class="SampleBasketSection Section-module_Section__yrYL2 Section-module_Section--white__C7uPc"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="RichText"
        >
          <p
            class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1 MuiTypography-gutterBottom"
          >
            test rich text
          </p>
        </div>
        <div
          class="SampleBasketSectionProducts"
        />
        <div
          class="RichText"
        >
          <p
            class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1 MuiTypography-gutterBottom"
          >
            your basket is empty.
          </p>
        </div>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-69 MuiButton-outlined MuiButton-outlinedPrimary"
          data-gtm="{\\"id\\":\\"cta-click1\\",\\"action\\":\\"/no/zanda-brand/torvtak/\\",\\"label\\":\\"browse all products\\"}"
          href="/no/zanda-brand/torvtak/"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label buttonStyles-label-72"
          >
            browse all products
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
